--- a/index.html
+++ b/index.html
@@ -3,18 +3,45 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap"
+            rel="stylesheet">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="./css/style.css">
-        <title>Struttura Discord</title>
+        <title>Discord</title>
     </head>
-    <body class="debug">
+    <body>
         <header><!--header-->
             <div class="banner"><!--banner-->
-                <div class="col-2"></div>
-                <div class="col-8"></div>
-                <div class="col-2"></div>
+                <div class="col-2"><img src="./img/logo.svg" alt="logo discord"></div>
+                <div class="col-8">
+                    <ul class="list">
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perché Discord</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="col-2"><button class="accedi butt">Accedi</button></div>
             </div>
             <div class="mainh">
-                <div class="box"></div>
+                <div class="box">
+                    <h1>Il tuo posto per parlare</h1><br>
+                    <p>Che tu faccia parte di un club scolastico, gruppo di
+                        gamer, comunità aritistica
+                        mondiale, o semplicemente di un piccolo gruppo di amici
+                        che vuole passare il tempo
+                        assieme, Discord rende più facile chiacchierare ogni
+                        giorno e ritrovarvi più spesso
+                    </p>
+                    <div class="db">
+                        <button class="butt mac"><i class="fa-solid fa-down-long"></i>  Scarica per Mac</button>
+                        <button class="butt brow">Apri Discord nel tuo browser</button>
+                    </div>
+                </div>
 
             </div>
         </header>
@@ -78,7 +105,6 @@
                         <div class="col-2"></div>
                         <div class="col-2"></div>
                         <div class="col-2"></div>
-
 
                     </div>
                     <div class="rows">
