--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header><!--header-->
             <div class="banner"><!--banner-->
-                <div class="col-2"><img src="./img/logo.svg" alt="logo discord"></div>
+                <div class="col-2"><img class="logo" src="./img/logo.svg" alt="logo discord"></div>
                 <div class="col-8">
                     <ul class="list">
                         <li><a href="#">Scarica</a></li>
@@ -25,7 +25,7 @@
                         <li><a href="#">Assistenza</a></li>
                     </ul>
                 </div>
-                <div class="col-2"><button class="accedi butt">Accedi</button></div>
+                <div class="col-2"><a href="#" class="accedi butt">Accedi</a></div>
             </div>
             <div class="mainh">
                 <div class="box">
@@ -38,8 +38,8 @@
                         giorno e ritrovarvi più spesso
                     </p>
                     <div class="db">
-                        <button class="butt mac"><i class="fa-solid fa-down-long"></i>  Scarica per Mac</button>
-                        <button class="butt brow">Apri Discord nel tuo browser</button>
+                        <a href="#" class="butt mac"><i class="fa-solid fa-down-long"></i>  Scarica per Mac</a>
+                        <a href="#" class="butt brow">Apri Discord nel tuo browser</a>
                     </div>
                 </div>
 
