--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;700;900&display=swap"
             rel="stylesheet">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="./css/style.css">
@@ -15,7 +15,8 @@
     <body>
         <header><!--header-->
             <div class="banner"><!--banner-->
-                <div class="col-2"><img class="logo" src="./img/logo.svg" alt="logo discord"></div>
+                <div class="col-2"><img class="logo" src="./img/logo.svg"
+                        alt="logo discord"></div>
                 <div class="col-8">
                     <ul class="list">
                         <li><a href="#">Scarica</a></li>
@@ -30,7 +31,8 @@
             <div class="mainh">
                 <div class="box">
                     <h1>Il tuo posto per parlare</h1><br>
-                    <p>Che tu faccia parte di un club scolastico, gruppo di
+                    <p class="he">Che tu faccia parte di un club scolastico,
+                        gruppo di
                         gamer, comunità aritistica
                         mondiale, o semplicemente di un piccolo gruppo di amici
                         che vuole passare il tempo
@@ -38,8 +40,12 @@
                         giorno e ritrovarvi più spesso
                     </p>
                     <div class="db">
-                        <a href="#" class="butt mac"><i class="fa-solid fa-down-long"></i>  Scarica per Mac</a>
-                        <a href="#" class="butt brow">Apri Discord nel tuo browser</a>
+                        <a href="#" class="butt mac"><i
+                                class="fa-solid fa-down-long"></i> Scarica per
+                            Mac
+                        </a>
+                        <a href="#" class="butt brow">Apri Discord nel tuo
+                            browser</a>
                     </div>
                 </div>
 
@@ -51,10 +57,28 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-8">
-                            <div class="card"></div>
+                            <div class="card">
+                                <img src="./img/item1.svg"
+                                    alt="froggy sitting in chat group">
+                            </div>
                         </div>
                         <div class="col-4">
-                            <div class="card"></div>
+                            <div class="card">
+                                <h2>
+                                    Un luogo a invito con tutto lo spazio
+                                    necessario
+                                    per parlare
+                                </h2>
+                                <p class="ma">
+                                    I server Discord sono organizzati in canali
+                                    tematici
+                                    in cui puoi collaborare, condividere o
+                                    semplicemente
+                                    parlare della tua giornata senza intasare
+                                    una
+                                    chat di gruppo
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -65,10 +89,20 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-4">
+                            <h2>Dove rovarsi é facile</h2>
+                            <p class="ma">
+                                Mettiti comodo in un canale vocale quando hai
+                                tempo. Gli amici nel tuo server possono vedere
+                                che sei
+                                lì e unirsi istantaneamente senza dover
+                                chiamare.
+                            </p>
                             <div class="card"></div>
                         </div>
                         <div class="col-8">
-                            <div class="card"></div>
+                            <div class="card">
+                                <img src="./img/item2.svg" alt="mago sever">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -79,10 +113,25 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-8">
-                            <div class="card"></div>
+                            <div class="card">
+                                <img src="./img/item3.svg"
+                                    alt="ciclope community">
+                            </div>
                         </div>
                         <div class="col-4">
-                            <div class="card"></div>
+                            <div class="card">
+                                <h2>Da pochi a un fandom</h2>
+                                <p class="ma">
+                                    Dai inizio a una community di qualsiasi
+                                    dimensione con strumenti di moderazione e
+                                    accesso
+                                    ai membri personalizzabile. Concedi ai
+                                    membri poteri
+                                    speciali, crea canali privati, e molto
+                                    altro.
+
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -90,7 +139,24 @@
             </section>
 
             <big-section><!--section4-->
-                <div class="container-2"></div>
+                <div class="container-2">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>
+                        Video e audio a bassa latenza ti faranno sentire come se
+                        foste tutti
+                        nella stessa stanza. Fai ciao in video, guarda gli amici
+                        giocare in
+                        streaming, o riunitevi in una sessione di disegno con la
+                        condivisione dello
+                        schermo.
+                    </p>
+                    <img src="./img/item4-big.svg" height="100%" alt>
+                    <h3>Pronto a iniziare la tua avventura?</h3>
+                    <a href="#" class="butt mac lily">
+                        <i class="fa-solid fa-down-long"></i> Scarica per
+                        Mac
+                    </a>
+                </div>
 
             </big-section>
 
