--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <header><!--header-->
             <div class="banner"><!--banner-->
                 <div class="col-2"><img class="logo" src="./img/logo.svg"
-                        alt="logo discord"></div>
+                        alt="logo discord">
+                </div>
                 <div class="col-8">
                     <ul class="list">
                         <li><a href="#">Scarica</a></li>
@@ -48,7 +49,8 @@
                             Mac
                         </a>
                         <a href="#" class="butt brow">Apri Discord nel tuo
-                            browser</a>
+                            browser
+                        </a>
                     </div>
                 </div>
 
@@ -87,7 +89,15 @@
                 </div>
 
             </section>
-            <div class="wave_top"><svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="currentColor"></path></svg></div>
+
+            <div class="wave_top">
+                <svg class="wave-1hkxOo" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100"
+                    preserveAspectRatio="none"><path
+                        class="wavePath-haxJK1 animationPaused-2hZ4IO"
+                        d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z"
+                        fill="currentColor"></path></svg>
+            </div>
             <section class="col"><!--section2-->
                 <div class="container">
                     <div class="row">
@@ -113,7 +123,14 @@
                 </div>
 
             </section>
-            <div class="wave_bottom"><svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="currentColor"></path></svg></div>
+            <div class="wave_bottom">
+                <svg class="wave-1hkxOo" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100"
+                    preserveAspectRatio="none"><path
+                        class="wavePath-haxJK1 animationPaused-2hZ4IO"
+                        d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z"
+                        fill="currentColor"></path></svg>
+            </div>
 
             <section><!--section3-->
                 <div class="container">
@@ -143,7 +160,15 @@
                 </div>
 
             </section>
-            <div class="wave_top"><svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="currentColor"></path></svg></div>
+
+            <div class="wave_top">
+                <svg class="wave-1hkxOo" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100"
+                    preserveAspectRatio="none"><path
+                        class="wavePath-haxJK1 animationPaused-2hZ4IO"
+                        d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z"
+                        fill="currentColor"></path></svg>
+            </div>
             <big-section class="col"><!--section4-->
 
                 <div class="container-2">
@@ -184,6 +209,7 @@
                         <a href="#"><i class="fa-brands fa-facebook icon"></i></a>
                         <a href="#"><i class="fa-brands fa-youtube icon"></i></a>
                     </div>
+
                     <div class="col-2">
                         <h4><a href="#">Prodotto</a></h4>
                         <ul>
@@ -194,6 +220,7 @@
                             <li><a href="#">Assistenza</a></li>
                         </ul>
                     </div>
+
                     <div class="col-2">
                         <h4><a href="#">Compagnia</a></h4>
                         <ul>
@@ -203,7 +230,9 @@
                             <li><a href="#">Redazione</a></li>
                             <li><a href="#">Negozio</a></li>
                         </ul>
+
                     </div>
+
                     <div class="col-2">
                         <h4><a href="#">Risorse</a></h4>
                         <ul>
@@ -220,6 +249,7 @@
                             <li><a href="#">Assistenza</a></li>
                         </ul>
                     </div>
+
                     <div class="col-2">
                         <h4><a href="#">Norme</a></h4>
                         <ul>
@@ -233,10 +263,11 @@
 
                 </div>
                 <div class="rows">
-                    <div class="cols-2">
+                    <div class="col-2">
                         <img class="logo" src="./img/logo.svg" alt>
                     </div>
-                    <div class="cols-2">
+                    
+                    <div class="col-2">
                         <a href="#" class="reg butt">Registrati</a>
                     </div>
 
